# HTML_TO_JSON

./: README.md  html_table_converter.py  pyproject.toml
examples/: test_multi_tables.py  test_nested_tables.py
examples/tables/: complex_test_table.html  multi_table_test.html
