[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html-table-converter"
version = "0.1.0"
description = "A robust Python module to convert HTML tables into JSON format."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4",
    "pdfplumber",
]
